[metadata]
name = EMOT
version = 1.0.6
author = WU Huihuan
author_email = hh.wu@connect.polyu.hk
description = EMOT is a tool for optimal design of electric machines.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hh-wu/EMOT
project_urls =
    Bug Tracker = https://github.com/hh-wu/EMOT/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    xmltodict
    numpy
    potracer
    scipy
    ezdxf
    shapely
    descartes
    psutil
    gevent
    platypus-opt
    Jinja2
    pandas
    matplotlib
    tqdm
    pydantic
    loguru
    plyer
    toml
    pywin32

[options.packages.find]
where = src